# swig

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: funnel.py  glm.py  radon.py  radon_minnesota_data.npz  sv.py  sv_sp500_data.npz  utils.py
swig/: __init__.py  swg.py  swg_markov.py
