[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swig"
version = "0.1.0"
description = "Nested Sampling with Slice-within-Gibbs for hierarchical Bayesian models"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "David Yallup", email = "dy297@cam.ac.uk"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "blackjax>=1.0.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]

[project.optional-dependencies]
examples = [
    "distrax>=0.1.5",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/yallup/swig"
Repository = "https://github.com/yallup/swig"

[tool.setuptools.packages.find]
where = ["."]
include = ["swig*"]

[tool.uv.sources]
blackjax = { git = "https://github.com/handley-lab/blackjax.git", branch = "nested_sampling" }
